stop modal from moving page 15px.
not quite sure why this is here in the first place. the modal covers the whole page anyway.

--- a/src/modules/app/css/bootstrap.scss
+++ b/src/modules/app/css/bootstrap.scss
@@ -5602,12 +5602,6 @@ button.close {
   overflow: hidden;
 }
 
-body.modal-open,
-.modal-open .navbar-fixed-top,
-.modal-open .navbar-fixed-bottom {
-  margin-right: 15px;
-}
-
 .modal {
   position: fixed;
   top: 0;
